src/pages/public-home/public-home.scss
@import "/src/assets/scss/breakpoints";

.bg-circle {
  position: relative;

  &::before {
    content: "";
    position: absolute;
    bottom: -45px;
    right: -570px;
    height: 800px;
    width: 800px;
    z-index: -1;
    background: hsla(14, 90%, 73%, 1);
    background: linear-gradient(90deg, hsla(14, 90%, 73%, 1) 0%, hsla(331, 54%, 44%, 1) 100%);
    border-radius: 68% 32% 68% 32% / 29% 66% 34% 71%;

    @include sm() {
      right: -520px;
    }

    @include md() {
      right: -490px;
    }

    @include lg() {
      height: 900px;
      width: 900px;
      right: -220px;
      bottom: -130px;
    }

    @include xl() {

    }

    @include xxl() {
      right: -300px;
    }
  }
}

.home-btn {
  font-size: 18px;
  color: #fff;
  padding: 12px 30px;
  display: block;
  border-radius: 4px;
  text-align: center;
  position: relative;
  z-index: 2;
  will-change: transform, filter;
  transform-style: preserve-3d;
  transition: all .3s ease-out;
}
.home-btn:hover {
  transform: scale(0.95);
}
.home-btn::before {
  content: "";
  height: 40px;
  display: inline-block;
  position: absolute;
  left: 30px;
  right: 30px;
  bottom: -5px;
  z-index: -1;
  border-radius: 10px;
  opacity: .8;
  filter: blur(15px);
  transform-style: preserve-3d;
  transition: all .3s ease-out;
}
.home-btn:hover::before {
  bottom: 0;
  filter: blur(8px);
}

.start-trial-button,
.start-trial-button::before {
  background: #E96D71;
}

#about-coffeasatock {
  position: relative;
  
  &::before {
    content: "";
    background-image: url(../../assets/images/blue-separator.svg);
    background-size: contain;
    background-repeat: no-repeat;
    background-position: bottom;
    display: block;
    position: absolute;
    top: -23.9%;
    height: 24%;
    width: 100vw;
    z-index: -1;
  }

  .gradient-underline span {
    background: linear-gradient(transparent 70%, #579999 70%);
  }
}

#dashboard-metrics {
  .bg-circle-orange {
    position: relative;

    &::before {
      content: "";
      position: absolute;
      bottom: 5px;
      left: 5px;
      height: 300px;
      width: 300px;
      background: rgb(2,0,36);
      background: linear-gradient(130deg, rgba(2,0,36,1) 0%, rgba(236,111,102,1) 0%, rgba(243,161,131,1) 100%);
      border-radius: 50%;
      z-index: -1;

      @include sm() {
        height: 500px;
        width: 500px;
      }
    }
  }

  .bottom-line-orange {
    &::after {
      content: "";
      display: block;
      width: 150px;
      height: 5px;
      margin-top: 30px;
      background-color: var(--orange);
    }
  }
}

#record-coffee-beans {
  .bg-circle-green {
    position: relative;

    &::before {
      content: "";
      position: absolute;
      bottom: -20px;
      right: -60px;
      height: 300px;
      width: 300px;
      background: rgb(2,0,36);
      background: linear-gradient(286deg, rgba(2,0,36,1) 0%, rgba(99,193,140,1) 0%, rgba(196,224,229,1) 100%);
      border-radius: 50%;
      z-index: -1;

      @include sm() {
        height: 500px;
        width: 500px;
      }
    }
  }

  .bottom-line-green {
    &::after {
      content: "";
      display: block;
      width: 150px;
      height: 5px;
      margin-top: 30px;
      background-color: var(--green);
    }
  }
}

#customize-range {
  .bg-circle-pink {
    position: relative;

    &::before {
      content: "";
      position: absolute;
      bottom: 5px;
      left: 5px;
      height: 300px;
      width: 300px;
      background: rgb(2,0,36);
      background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(186,83,112,1) 0%, rgba(244,226,216,1) 100%);
      border-radius: 50%;
      z-index: -1;

      @include sm() {
        height: 500px;
        width: 500px;
      }
    }
  }

  .bottom-line-pink {
    &::after {
      content: "";
      display: block;
      width: 150px;
      height: 5px;
      margin-top: 30px;
      background-color: var(--pink);
    }
  }
}

#tasting-wheel {
  .bg-circle-blue {
    position: relative;

    &::before {
      content: "";
      position: absolute;
      bottom: -50px;
      right: -60px;
      height: 300px;
      width: 300px;
      background: rgb(2,0,36);
      background: linear-gradient(270deg, rgba(2,0,36,1) 0%, rgba(76,161,175,1) 0%, rgba(196,224,229,1) 100%);
      border-radius: 50%;
      z-index: -1;

      @include sm() {
        height: 500px;
        width: 500px;
      }
    }
  }

  .bottom-line-blue {
    &::after {
      content: "";
      display: block;
      width: 150px;
      height: 5px;
      margin-top: 30px;
      background-color: var(--ash-blue);
    }
  }
}

#customers-voice {
  .quote {
    position: relative;

    &::after {
      content: "";
      position: absolute;
      top: 0;
      left: 0;
      width: 300px;
      height: 300px;
      z-index: -1;
      opacity: 0.7;
      background-image: url('../../assets/images/quotes.png');
      background-repeat: no-repeat;
      background-size: cover;
    }
  }
}

#faq {
  position: relative;
  
  &::before {
    content: "";
    background-image: url(../../assets/images/pink-separator.svg);
    background-size: contain;
    background-repeat: no-repeat;
    background-position: bottom;
    display: block;
    position: absolute;
    top: -61.9%;
    height: 63%;
    width: 100vw;
    z-index: -1;
  }
}

.child-border-bottom {
  section {    
    &:not(:last-child) {
      border-bottom: 1px solid rgb(102, 97, 91, 0.4);
      
    }
  }
}

